--- a/SupervisedLearningYouTubeData.ipynb
+++ b/SupervisedLearningYouTubeData.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "mount_file_id": "https://github.com/thomasawolff/Machine-Learning-Projects/blob/master/KerasDeepLearning1.ipynb",
-      "authorship_tag": "ABX9TyMsp3mFW95NvW3yU5rsskcv",
+      "authorship_tag": "ABX9TyPlVECw+Fe4mj/LbPtQpWeJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 282
         },
         "id": "xgyhlzRO6oso",
-        "outputId": "5bfe0faf-b622-4621-d8f7-40749a416ddb"
+        "outputId": "a271e461-1aee-427a-f26d-aedadd3464f3"
       },
       "source": [
         "import nltk\r\n",
@@ -63,6 +64,38 @@
         "url = 'youTubeVideosUTF.csv'\r\n",
         "\r\n",
         "\r\n",
+        "\r\n",
+        "    "
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-60e993aaa381>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;31m#print(os.listdir())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'youTubeVideosUTF.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nrOMaeG_O1Nu"
+      },
+      "source": [
         "class textAnalytics(object):\r\n",
         "\r\n",
         "    def __init__(self,file1,\r\n",
@@ -142,9 +175,17 @@
         "                   dataFeature2 = 'categoryID',\r\n",
         "                   dataFeature3 = 'views',\r\n",
         "                   dataFeature4 = 'commentText')\r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MVuGL5WzO-en"
+      },
+      "source": [
         "def pandasAggregate():\r\n",
         "    data = go.kMeansClustering()\r\n",
         "    \r\n",
@@ -188,8 +229,17 @@
         "    return data\r\n",
         "\r\n",
         "#pandasAggregate()\r\n",
-        "\r\n",
-        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "12R32_BmPDGQ"
+      },
+      "source": [
         "def dataMerge():\r\n",
         "    #df = pandasAggregate()\r\n",
         "    #np.seterr(divide = 'ignore')\r\n",
@@ -253,7 +303,17 @@
         "    ##    [2661 rows x 69 columns]\r\n",
         "\r\n",
         "#print(dataMerge())\r\n",
-        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A2W-8FPlPFuz"
+      },
+      "source": [
         "def modelPredictionsLR(operation):\r\n",
         "    data = dataMerge()\r\n",
         "    \r\n",
@@ -332,27 +392,10 @@
         "    ##    weighted avg       0.71      0.71      0.71       532\r\n",
         "\r\n",
         "\r\n",
-        "modelPredictionsLR('cross validation')\r\n",
-        "    "
+        "modelPredictionsLR('cross validation')"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
-            "None\n",
-            "Variance Explained by PCA model: [0.61745155 0.32753289]\n",
-            "Singular values of PCA model: [287.46980561 209.3718304 ]\n",
-            "Cross Validation scores from 8 iterations:\n",
-            "[0.695      0.73       0.77       0.67839196 0.73366834 0.72361809\n",
-            " 0.69849246 0.69346734]\n",
-            "Hit Enter to leave\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
