--- a/SupervisedLearningYouTubeData.ipynb
+++ b/SupervisedLearningYouTubeData.ipynb
@@ -6,8 +6,8 @@
       "name": "KerasDeepLearning1.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "mount_file_id": "https://github.com/thomasawolff/Machine-Learning-Projects/blob/master/KerasDeepLearning1.ipynb",
-      "authorship_tag": "ABX9TyPlVECw+Fe4mj/LbPtQpWeJ",
+      "mount_file_id": "https://github.com/thomasawolff/YouTube-Video-Comments-Project/blob/main/SupervisedLearningYouTubeData.ipynb",
+      "authorship_tag": "ABX9TyOinzYC13vbHpBMxnMRaDqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 282
+          "base_uri": "https://localhost:8080/"
         },
         "id": "xgyhlzRO6oso",
-        "outputId": "a271e461-1aee-427a-f26d-aedadd3464f3"
+        "outputId": "51c9f597-ab33-47cf-d564-525b78679cd5"
       },
       "source": [
         "import nltk\r\n",
@@ -58,7 +57,7 @@
         "from sklearn.model_selection import cross_val_score\r\n",
         "from sklearn.model_selection import train_test_split\r\n",
         "\r\n",
-        "\r\n",
+        "drive.mount('/content/drive')\r\n",
         "print(os.chdir('/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'))\r\n",
         "#print(os.listdir())\r\n",
         "url = 'youTubeVideosUTF.csv'\r\n",
@@ -67,27 +66,27 @@
         "\r\n",
         "    "
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "None\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-60e993aaa381>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;31m#print(os.listdir())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'youTubeVideosUTF.csv'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'"
-          ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C9TSW-T3PpxQ"
+      },
+      "source": [
+        "# New Section"
       ]
     },
     {
@@ -177,7 +176,7 @@
         "                   dataFeature4 = 'commentText')\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -231,7 +230,7 @@
         "#pandasAggregate()\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -305,13 +304,17 @@
         "#print(dataMerge())\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A2W-8FPlPFuz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A2W-8FPlPFuz",
+        "outputId": "eaebdc94-8f82-4a1c-bae4-19dfe8858d69"
       },
       "source": [
         "def modelPredictionsLR(operation):\r\n",
@@ -394,8 +397,29 @@
         "\r\n",
         "modelPredictionsLR('cross validation')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/pandas/core/series.py:726: RuntimeWarning: divide by zero encountered in log2\n",
+            "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Variance Explained by PCA model: [0.61745155 0.32753289]\n",
+            "Singular values of PCA model: [287.46980561 209.3718304 ]\n",
+            "Cross Validation scores from 8 iterations:\n",
+            "[0.695      0.73       0.77       0.67839196 0.73366834 0.72361809\n",
+            " 0.69849246 0.69346734]\n",
+            "Hit Enter to leave\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
