--- a/UnsupervisedLearningYouTubeData.ipynb
+++ b/UnsupervisedLearningYouTubeData.ipynb
@@ -3,11 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled3.ipynb",
+      "name": "UnsupervisedLearningYouTubeData.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1xZGwRSaW0OJQ2GDcGP9CtNdIocrvgxt5",
-      "authorship_tag": "ABX9TyPOXAwQLxM3UgmdgPcwJloN",
+      "authorship_tag": "ABX9TyO0/IaGEvenJ4GTUQs0x+0k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer\r\n",
         "\r\n",
         "\r\n",
+        "drive.mount('/content/drive')\r\n",
         "print(os.chdir('/content/drive/MyDrive/Research_Methods/Course_Project/YouTube_Data/Unicode_Files'))\r\n",
         "#print(os.listdir())\r\n",
         "url = 'youTubeVideosUTF.csv'\r\n",
